Novos recursos e tags sendo trabalhadas

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <merta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content=" É um projeto um projeto em fase de melhorias">
         <meta name="keywords" content="HTML5, CSS3, JavaScript">
         <meta name="author" content="Rafael do Carmo Gonçalves">
@@ -224,13 +223,7 @@
             </ol>
         </li>
         <li>Uva
-            <ol>
-                <li>Uva verde</li>
-                <li>Uva roxa</li>
-                <li>Uva preta</li>
-                <li>Uva sem sementes</li>
-                <li>Uva passa</li>
-            </ol>
+            <ol
         </li>
     </ol>
     
