Mudei os contatos

--- a/contato.html
+++ b/contato.html
@@ -240,6 +240,10 @@
     <p>telefone: (11) 1234-5678</p>
     <p>endereço: Rua Exemplo, 123 - Cidade, Estado</p>
     <p>horário de atendimento: Segunda a Sexta, das 9h às 18h</p>
+    <p>redes sociais: 
+        <a href="https://www.facebook.com/meusite" target="_blank">Facebook</a>, 
+        <a href="https://www.twitter.com/meusite" target="_blank">Twitter</a>, 
+        <a href="https://www.instagram.com/meusite" target="_blank">Instagram</a>
 
     <p><span>ipsum dolor sit amet, consectetur adipiscing elit. Praesent at tellus lacinia, vulputate nisl ac, tristique odio</span>. Vestibulum quis diam tempus, accumsan nulla vitae, commodo elit. Donec sagittis non erat eu posuere. Phasellus sit amet massa dictum, aliquet leo et, luctus sem. Vestibulum sit amet leo risus. Proin ut diam pulvinar, congue lorem et, faucibus erat. In ipsum massa, mattis eget sagittis at, rutrum sed augue.</p>
 
