--- a/contato.html
+++ b/contato.html
@@ -229,9 +229,9 @@
 
     <h1>Mercado Livre</h1>
     
-    <a href="index.html" target="_self">Home</a>
-    <a href="produtos.html" target="_self">Produtos</a>
-    <a href="contato.html" target="_self">Contatos</a>
+    <a href="index.html" target="_self">Home</a> &nbsp;| &nbsp;
+    <a href="produtos.html" target="_self">Produtos</a> &nbsp;| &nbsp;
+    <a href="contato.html" target="_self">Contatos</a> &nbsp;| &nbsp;
 
     <hr>
 
@@ -240,7 +240,9 @@
     <p>telefone: (11) 1234-5678</p>
     <p>endereço: Rua Exemplo, 123 - Cidade, Estado</p>
     <p>horário de atendimento: Segunda a Sexta, das 9h às 18h</p>
+
     <p>redes sociais: 
+
         <a href="https://www.facebook.com/meusite" target="_blank">Facebook</a>, 
         <a href="https://www.twitter.com/meusite" target="_blank">Twitter</a>, 
         <a href="https://www.instagram.com/meusite" target="_blank">Instagram</a>
