--- a/produtos.html
+++ b/produtos.html
@@ -230,16 +230,18 @@
 
     <h1 id="topo">Mercado Livre</h1>
     
-    <a href="index.html" target="_self">Home</a>
-    <a href="produtos.html" target="_self">Produtos</a>
-    <a href="contato.html" target="_self">Contatos</a>
+    <a href="index.html" target="_self">Home</a> &nbsp;| &nbsp;
+    <a href="produtos.html" target="_self">Produtos</a> &nbsp;| &nbsp;
+    <a href="contato.html" target="_self">Contatos</a> &nbsp;| &nbsp;
 
     <hr>
 
-    <a href="#Veículos" target="_self">Veículos</a>
-    <a href="#Tecnologia" target="_self">Tecnologia</a>
-    <a href="#Casas-e-Móveis" target="_self">Casas e Móveis</a>
-    <a href="#Eletrodomésticos" target="_self">Eletrodomésticos</a>
+    <h2>Produtos</h2>
+
+    <a href="#Veículos" target="_self">Veículos</a> &nbsp;| &nbsp;
+    <a href="#Tecnologia" target="_self">Tecnologia</a> &nbsp;| &nbsp;
+    <a href="#Casas-e-Móveis" target="_self">Casas e Móveis</a> &nbsp;| &nbsp;
+    <a href="#Eletrodomésticos" target="_self">Eletrodomésticos</a> &nbsp;| &nbsp;
 
     <hr>
 
