--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
 
     <h1>Mercado Livre</h1>
     
-    <a href="index.html" target="_self">Home</a>
-    <a href="produtos.html" target="_self">Produtos</a>
-    <a href="contato.html" target="_self">Contatos</a>
+    <a href="index.html" target="_self">Home</a> &nbsp;| &nbsp;
+    <a href="produtos.html" target="_self">Produtos</a> &nbsp;| &nbsp;
+    <a href="contato.html" target="_self">Contatos</a> &nbsp;| &nbsp;
 
     <hr>
 
